cloud/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capricorn
  labels:
    app: capricorn
